--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>MyWorld 3D</title>
+  <title>MyWorld 3D - Voxel Game</title>
   <style>
     * {
       margin: 0;
@@ -14,7 +14,8 @@
     body {
       overflow: hidden;
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      background: #87CEEB;
+      background: #000;
+      color: #fff;
     }
 
     #game-container {
@@ -38,7 +39,7 @@
     #crosshair::after {
       content: '';
       position: absolute;
-      background: white;
+      background: rgba(255, 255, 255, 0.8);
       border: 1px solid rgba(0, 0, 0, 0.5);
     }
 
@@ -67,54 +68,21 @@
       text-shadow: 1px 1px 2px black;
       z-index: 100;
       pointer-events: none;
+      font-family: 'Courier New', monospace;
+      background: rgba(0, 0, 0, 0.5);
+      padding: 10px;
+      border-radius: 4px;
     }
 
     #ui h3 {
-      margin-bottom: 10px;
+      margin: 0 0 10px 0;
       font-size: 16px;
+      font-weight: bold;
     }
 
     #ui p {
       margin: 5px 0;
-    }
-
-    #block-selector {
-      position: fixed;
-      bottom: 20px;
-      left: 50%;
-      transform: translateX(-50%);
-      display: flex;
-      gap: 5px;
-      padding: 10px;
-      background: rgba(0, 0, 0, 0.5);
-      border-radius: 8px;
-      z-index: 100;
-    }
-
-    .block-slot {
-      width: 50px;
-      height: 50px;
-      border: 2px solid rgba(255, 255, 255, 0.5);
-      border-radius: 4px;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      font-size: 20px;
-      font-weight: bold;
-      color: white;
-      text-shadow: 1px 1px 2px black;
-      cursor: pointer;
-      transition: all 0.2s;
-    }
-
-    .block-slot.selected {
-      border-color: white;
-      background: rgba(255, 255, 255, 0.3);
-      transform: scale(1.1);
-    }
-
-    .block-slot:hover {
-      background: rgba(255, 255, 255, 0.2);
+      line-height: 1.4;
     }
 
     #instructions {
@@ -122,18 +90,20 @@
       top: 50%;
       left: 50%;
       transform: translate(-50%, -50%);
-      background: rgba(0, 0, 0, 0.85);
+      background: rgba(0, 0, 0, 0.9);
       color: white;
-      padding: 30px;
+      padding: 40px;
       border-radius: 10px;
       text-align: center;
       z-index: 200;
       max-width: 500px;
+      box-shadow: 0 0 30px rgba(0, 0, 0, 0.8);
     }
 
     #instructions h1 {
-      margin-bottom: 20px;
+      margin: 0 0 20px 0;
       font-size: 28px;
+      font-weight: bold;
     }
 
     #instructions p {
@@ -141,29 +111,34 @@
       line-height: 1.6;
     }
 
-    #instructions .key {
+    .key {
       display: inline-block;
       background: rgba(255, 255, 255, 0.2);
       padding: 3px 8px;
       border-radius: 3px;
-      font-family: monospace;
+      font-family: 'Courier New', monospace;
       font-weight: bold;
+      border: 1px solid rgba(255, 255, 255, 0.3);
     }
 
     #start-btn {
-      margin-top: 20px;
-      padding: 12px 30px;
+      margin-top: 30px;
+      padding: 15px 40px;
       font-size: 18px;
+      font-weight: bold;
       background: #4CAF50;
       color: white;
       border: none;
       border-radius: 5px;
       cursor: pointer;
-      transition: background 0.3s;
+      transition: all 0.2s;
+      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
     }
 
     #start-btn:hover {
       background: #45a049;
+      transform: translateY(-2px);
+      box-shadow: 0 6px 15px rgba(0, 0, 0, 0.5);
     }
 
     #loading {
@@ -173,33 +148,38 @@
       transform: translate(-50%, -50%);
       color: white;
       font-size: 24px;
-      text-shadow: 1px 1px 2px black;
+      text-shadow: 2px 2px 4px black;
       z-index: 300;
+      font-weight: bold;
     }
   </style>
 </head>
 <body>
-  <div id="loading">Loading...</div>
+  <div id="loading">Loading world...</div>
   <div id="game-container"></div>
   <div id="crosshair"></div>
+
   <div id="ui">
     <h3>MyWorld 3D</h3>
     <p>FPS: <span id="fps">0</span></p>
     <p>Position: <span id="position">0, 0, 0</span></p>
+    <p>Stats: <span id="stats">Placed: 0 | Broken: 0</span></p>
   </div>
-  <div id="block-selector"></div>
+
   <div id="instructions">
     <h1>Welcome to MyWorld 3D</h1>
-    <p>A Minecraft-style voxel game built with Three.js</p>
+    <p>A Minecraft-style voxel game built with Three.js and TypeScript</p>
     <p><span class="key">WASD</span> - Move</p>
     <p><span class="key">Mouse</span> - Look around</p>
     <p><span class="key">Left Click</span> - Remove block</p>
     <p><span class="key">Right Click</span> - Place block</p>
-    <p><span class="key">1-9</span> - Select block type</p>
     <p><span class="key">Space</span> - Jump</p>
+    <p><span class="key">Shift</span> - Sprint (1.5x speed)</p>
     <p><span class="key">ESC</span> - Release mouse</p>
+    <br>
     <button id="start-btn">Click to Start</button>
   </div>
+
   <script type="module" src="/src/main.ts"></script>
 </body>
 </html>
